fix elements' alignment

--- a/src/components/CardFeed/styles.module.css
+++ b/src/components/CardFeed/styles.module.css
@@ -3,6 +3,4 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   gap: 3rem 40px;
-  /* TODO: use additional .container class */
-  max-width: 1160px;
 }
