--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@
 body {
   min-width: 320px;
   min-height: 100vh;
+  margin: 0;
 }
 
 main {
